--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -30,3 +30,29 @@ jobs:
           push: true
           tags: ashishkingdom/ci-cd-python-redis:latest
           labels: ${{ steps.meta.outputs.labels }}
+  deploy:
+    runs-on: ubuntu-latest
+    if: ${{ github.ref == 'refs/heads/main' }}
+    needs: [ build_and_push ]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: copy file via ssh key
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{ secrets.AWS_EC2_HOST }}
+          username: ${{ secrets.AWS_EC2_USERNAME }}
+          key: ${{ secrets.AWS_EC2_SECRET_KEY }}
+          source: "docker-compose.yml, nginx/nginx.conf"
+          target: .
+      - name: run docker-compose
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.AWS_EC2_HOST }}
+          username: ${{ secrets.AWS_EC2_USERNAME }}
+          key: ${{ secrets.AWS_EC2_SECRET_KEY }}
+          script: |
+            docker compose down
+            docker rmi -f $(docker images -q)
+            docker compose pull
+            docker compose up -d
