--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -55,5 +55,5 @@ jobs:
             sudo docker-compose down
             sudo docker rmi -f $(docker images -q)
             sudo docker-compose pull
-            sudo docker-compose up -d
+            sudo docker-compose up -d -e REDIS_URL=${REDIS_URL}
         
