--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -55,5 +55,5 @@ jobs:
             sudo docker-compose down
             sudo docker rmi -f $(docker images -q)
             sudo docker-compose pull
-            sudo docker-compose up -d -e REDIS_URL=${{secrets.REDIS_URL}}
+            sudo docker-compose up -d -e REDIS_URL=${{vars.AWS_ELASTICCACHE_URL}}
         
