--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -37,13 +37,17 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Create ENV file
+        run: |
+          touch .env
+          echo "REDIS_URL=${{ secrets.REDIS_URL }}" >> .env
       - name: copy file via ssh key
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.AWS_EC2_HOST }}
           username: ${{ secrets.AWS_EC2_USERNAME }}
           key: ${{ secrets.AWS_EC2_SECRET_KEY }}
-          source: "docker-compose.yml, nginx.conf"
+          source: "docker-compose.yml, nginx.conf, .env"
           target: .
       - name: run docker-compose
         uses: appleboy/ssh-action@v1.0.0
@@ -55,5 +59,5 @@ jobs:
             sudo docker-compose down
             sudo docker rmi -f $(docker images -q)
             sudo docker-compose pull
-            sudo docker-compose up -d -e REDIS_URL=${{vars.AWS_ELASTICCACHE_URL}}
+            sudo docker-compose up -d
         
