--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 jobs:
   build_and_push:
-    name: Push docker image to Docker Hub
+    name: Push docker image to AWS ECR
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
@@ -21,10 +21,10 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
       - name: Get commit hash
         id: commit_hash
-        run: echo "::set-output name=hash::$(echo $GITHUB_SHA | cut -c1-7)"
+        run: echo "hash=$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_OUTPUT
       - name: Get timestamp
         id: timestamp
-        run: echo "::set-output name=timestamp::$(date +'%Y%m%d%H%M%S')"
+        run: echo "timestamp=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_OUTPUT
       - name: Build, tag and push image to AWS ECR
         id: build-image
         env:
@@ -34,7 +34,7 @@ jobs:
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name=ecr_image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          echo "ecr_image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
       # - name: Login to Docker Hub
       #   uses: docker/login-action@v3
       #   with:
