--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -2,7 +2,7 @@ name: Build, Push, Deploy.
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 jobs:
   build_and_push:
     name: Push docker image to AWS ECR
@@ -34,6 +34,8 @@ jobs:
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+    outputs:
+      image_tag: ${{ steps.commit_hash.outputs.hash }}-${{ steps.timestamp.outputs.timestamp }}
       # - name: Login to Docker Hub
       #   uses: docker/login-action@v3
       #   with:
@@ -57,7 +59,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/main' }}
-    needs: [ build_and_push ]
+    needs: [build_and_push]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -77,7 +79,7 @@ jobs:
         run: |
           touch .env
           echo "REDIS_URL=${{ vars.AWS_ELASTICCACHE_URL }}" >> .env
-          echo "ECR_IMAGE_REPO=$ECR_REGISTRY/$ECR_REPOSITORY:latest" >> .env
+          echo "ECR_IMAGE_REPO=$ECR_REGISTRY/$ECR_REPOSITORY:${{needs.build_and_push.outputs.image_tag}}" >> .env
       - name: copy file via ssh key
         uses: appleboy/scp-action@v0.1.7
         with:
@@ -98,4 +100,3 @@ jobs:
             sudo docker rmi -f $(docker images -q)
             sudo docker-compose pull
             sudo docker-compose up -d
-        
