--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,23 +8,8 @@ services:
     image: ${ECR_IMAGE_REPO}
     container_name: fastapi_app
     environment:
-      - DATABASE_URL=sqlite+aiosqlite:///./test.db
-      - REDIS_URL=${REDIS_URL}
-    networks:
-      - app_network
-
-  nginx:
-    image: nginx:latest
-    container_name: nginx_proxy
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - name=value
     ports:
-      - "8000:80"
-    depends_on:
-      - fastapi
-    networks:
-      - app_network
+      - "8000:8000"
 
-networks:
-  app_network:
-    driver: bridge
+
